backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-center-api
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: call-center-api
  template:
    metadata:
      labels:
        app: call-center-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "4000"
    spec:
      containers:
        - name: nodejs-app
          image: 692859934069.dkr.ecr.ap-south-1.amazonaws.com/callcenterapp:f88abadd5855c47775fe8858a604bc2a4466ae46
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
