frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-center-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: call-center-frontend
  template:
    metadata:
      labels:
        app: call-center-frontend
    spec:
      containers:
        - name: nextjs-app
          image: 692859934069.dkr.ecr.ap-south-1.amazonaws.com/callcenterfrontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
